2014-10-19  Cesar Strauss  <cestrauss@gmail.com>

	Revert corruption of file attributes (again).

	* common/issue.log mingw32/issue.log msys/issue.log: Remove bogus
	executable attribute.

2014-10-07  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgrade dos2unix to version 7.1.

	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 7.1.
	* msys/msys-dos2unix.xml: Updated for dos2unix version 7.1.
	* mingw32/issue.log: Updated accordingly.
	* msys/issue.log: Updated accordingly.
	* common/issue.log: Updated accordingly.

2014-08-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Withdraw regressive WSL-4.x from general distribution.

	* mingw32/mingw32-runtime.xml: Revert to last issue predating WSL-4.x
	* mingw32/mingw32-gcc4.xml: Clean up malformed dependency references.
	(mingwrt, w32api): Replace all dependencies on WSL-4.x releases with
	generic references to the most recently available releases of previous
	mingwrt-3.x and w32api-3.x packages respectively.

	* common/package-list.xml common/issue.log: Update accordingly.
	* mingw32/mingw32-package-list.xml mingw32/issue.log: Likewise.

2014-08-25  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Revert corruption of file attributes (again).

	* common/issue.log mingw32/issue.log msys/issue.log: Remove bogus
	executable attribute; this also necessitates republication of...
	* common/package-list.xml mingw32/mingw32-package-list.xml:
	* msys/msys-package-list.xml: ...all of these.

2014-08-05  Erwin Waterlander  <waterlan@xs4all.nl>

	Upgrade dos2unix to version 6.0.6.

	* mingw32/mingw32-dos2unix.xml: Updated for dos2unix version 6.0.6.
	* msys/msys-dos2unix.xml: Updated for dos2unix version 6.0.6.
	* mingw32/issue.log: Updated accordingly.
	* msys/issue.log: Updated accordingly.
	* common/issue.log: Update accordingly.

2014-06-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Remove bogus mingw32-binutils-2.24 dependency.
