@@ -28,7 +28,7 @@
   8384936e52651ea2fcdbb8cba5fb7eb880699118 2012073100 msys-autogen.xml
   a7ff50459cd0958291619c918690c2a716149aa0 2012073100 msys-automake.xml
   99df5097edfe73e5081a1234d84f6c87ce5f46d2 2013072300 msys-base.xml
-  56b441272a03bc5ade62d4c7dc9595468baa922f 2012073100 msys-bash.xml
+  f531daec76442652e8a2e6a60e04e1d2b875baa5 2014101900 msys-bash.xml
   e52982cbff0b0bb825461deb9af0411f72f2e4a2 2010090600 msys-binutils.xml
   098df570908eec421a271133cd0556f5894cce65 2012073100 msys-bison.xml
   a339eb6a797f2365119e4d2fd12c97ef50615dfc 2013020400 msys-bzip2.xml
@@ -73,7 +73,7 @@
   ec0f6517ee5afb3d8f4887dd0061b558604fd3f5 2012073100 msys-mktemp.xml
   243df0057053eebc442d922dff075e09fb579805 2012073100 msys-openssh.xml
   0103c79956ba9fa128755cd93374f0fc334c7cf6 2012073100 msys-openssl.xml
-  0defc38585dbedbe010d82bdf6e4dbbae8fb1398 2014100700 msys-package-list.xml
+  0defc38585dbedbe010d82bdf6e4dbbae8fb1398 2014101900 msys-package-list.xml
   d19e1e39e5fab25a3d40acb92b98b40a60b0da90 2012073100 msys-patch.xml
   d4f194d2e95035da2b712c54053fb6ad5d45e1d9 2013101200 msys-perl.xml
   19ddf46e23e23010a440af1b423d986712c3bda7 2012073100 msys-popt.xml
